added south carolina section

--- a/index.html
+++ b/index.html
@@ -726,6 +726,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-sc">
+					<h3>South Carolina</h3>
+					<div id="usa-sc-29292">
+						<h4>Columbia (29292)</h4>
+						<div id="usa-sc-29292-sf-1">
+							<img src="usa/sc/29292/sf/18Oct19a.jpg" height="150" width="375">
+							<caption>Shelley Foels, Murrells Inlet, SC 29576</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
