--- a/initials.html
+++ b/initials.html
@@ -44,6 +44,10 @@
 				<td>ef</td>
 			</tr>
 			<tr>
+				<td>Foels, Shelley</td>
+				<td>sf</td>
+			</tr>
+			<tr>
 				<td>Gardiner, Caitlyn</td>
 				<td>cg</td>
 			</tr>
