added south dakota section

--- a/index.html
+++ b/index.html
@@ -736,6 +736,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-sd">
+					<h3>South Dakota</h3>
+					<div id="usa-sd-570">
+						<h4>Sioux Falls (570)</h4>
+						<div id="usa-sd-570-jh-1">
+							<img src="usa/sd/570/jh/2Dec19a.jpg" height="150" width="375">
+							<caption>Jason Hoffmann, Gaithersburg, MD 20882</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
