added slc to ut section

--- a/index.html
+++ b/index.html
@@ -788,6 +788,17 @@
 							<caption>Patti Southerland, Payson, UT 84651</caption>
 						</div>
 					</div>
+					<div id="usa-ut-840">
+						<h4>Salt Lake City (840)</h4>
+						<div id="usa-ut-840-ps-1">
+							<img src="usa/ut/840/ps/20Dec08a.jpg" height="150" width="375">
+							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
+						<div id="usa-ut-840-ps-2">
+							<img src="usa/ut/840/ps/19Dec15a.jpg" height="150" width="375">
+							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
