added virginia section

--- a/index.html
+++ b/index.html
@@ -800,6 +800,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-va">
+					<h3>Virginia</h3>
+					<div id="usa-va-220">
+						<h4>Northern (220)</h4>
+						<div id="usa-va-220-el-1">
+							<img src="usa/va/220/el/18Nov19a.jpg" height="150" width="375">
+							<caption>Eamonn Lopez, Damascus, MD 20872</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
