added washington state section

--- a/index.html
+++ b/index.html
@@ -810,6 +810,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-wa">
+					<h3>Washington</h3>
+					<div id="usa-wa-980">
+						<h4>Seattle (980)</h4>
+						<div id="usa-wa-980-ps-1">
+							<img src="usa/wa/980/ps/13Dec10a.jpg" height="150" width="375">
+							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
