added spokane to wa section

--- a/index.html
+++ b/index.html
@@ -819,6 +819,17 @@
 							<caption>Patti Southerland, Payson, UT 84651</caption>
 						</div>
 					</div>
+					<div id="usa-wa-990">
+						<h4>Spokane (990)</h4>
+						<div id="usa-wa-990-mgd-1">
+							<img src="usa/wa/990/mgd/22Apr20a.jpg" height="150" width="375">
+							<caption>Mary & Glen Day, Fruitland, WA 99129</caption>
+						</div>
+						<div id="usa-wa-990-mgd-2">
+							<img src="usa/wa/990/mgd/22Apr20a2.jpg" height="150" width="375">
+							<caption>Mary & Glen Day, Fruitland, WA 99129</caption>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
