--- a/initials.html
+++ b/initials.html
@@ -40,6 +40,10 @@
 				<td>twc</td>
 			</tr>
 			<tr>
+				<td>Day, Mary & Glen</td>
+				<td>mgd</td>
+			</tr>
+			<tr>
 				<td>English Family</td>
 				<td>ef</td>
 			</tr>
