added idaho section

--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
 							</ul>
 						</li>
 						<li>
+							<a href="#usa-id">Idaho</a>
+							<ul>
+								<li>
+									<a href="#usa-id-83708">Boise Main PO (83708)</a>
+								</li>
+							</ul>
+						</li>
+						<li>
 							<a href="#usa-in">Indiana</a>
 							<ul>
 								<li>
@@ -518,6 +526,16 @@
 						<div id="usa-ga-300-wf-1">
 							<img src="usa/ga/300/wf/10Mar20a.jpg" height="150" width="375">
 							<caption>Watson Family, Alpharetta, GA 30022</caption>
+						</div>
+					</div>
+				</div>
+				<div id="usa-id">
+					<h3>Idaho</h3>
+					<div id="usa-id-83708">
+						<h4>Boise Main PO (83708)</h4>
+						<div id="usa-id-83708-el-1">
+							<img src="usa/id/83708/el/23Apr20a.jpg" height="150" width="375">
+							<caption>Eamonn Lopez, Damascus, MD 20872/Boise Postmaster, Boise, ID 83708</caption>
 						</div>
 					</div>
 				</div>
