added boise 837- to idaho section

--- a/index.html
+++ b/index.html
@@ -531,6 +531,13 @@
 				</div>
 				<div id="usa-id">
 					<h3>Idaho</h3>
+					<div id="usa-id-837">
+						<h4>Boise (837)</h4>
+						<div id="usa-id-837-el-1">
+							<img src="usa/id/837/el/23Apr20a.jpg" height="150" width="375">
+							<caption>Eamonn Lopez, Damascus, MD 20872/Boise Postmaster, Boise, ID 83708</caption>
+						</div>
+					</div>
 					<div id="usa-id-83708">
 						<h4>Boise Main PO (83708)</h4>
 						<div id="usa-id-83708-el-1">
