--- a/initials.html
+++ b/initials.html
@@ -112,6 +112,10 @@
 				<td>mf</td>
 			</tr>
 			<tr>
+				<td>Matthews, John</td>
+				<td>jm</td>
+			</tr>
+			<tr>
 				<td>Matthews, Skip</td>
 				<td>sm</td>
 			</tr>
