added alabama section

--- a/index.html
+++ b/index.html
@@ -387,6 +387,16 @@
 			</div>
 			<div id="usa">
 				<h2>United States</h2>
+				<div id="usa-al">
+					<h3>Alabama</h3>
+					<div id="usa-al-366">
+						<h4>Mobile (366)</h4>
+						<div id="usa-al-366-bl-1">
+							<img src="usa/al/366/bl/28Apr20a.jpg" height="150" width="375">
+							<caption>Betty Lartigue, Mobile, AL 36605</caption>
+						</div>
+					</div>
+				</div>
 				<div id="usa-ak">
 					<h3>Alaska</h3>
 					<div id="usa-ak-995">
