--- a/initials.html
+++ b/initials.html
@@ -84,6 +84,11 @@
 				<td>kf</td>
 			</tr>
 			<tr>
+				<td>Lartigue, Betty</td>
+				<td>bl</td>
+			</tr>
+
+			<tr>
 				<td>Lewis Family</td>
 				<td>lf</td>
 			</tr>
