added columbia to mo

--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
 								<li>
 									<a href="#usa-mo-630">St. Louis (630)</a>
 								</li>
+								<li>
+									<a href="#usa-mo-652">Mid-Missouri/Columbia (652)</a>
+								</li>
 							</ul>
 						</li>
 						<li>
@@ -706,6 +709,13 @@
 						<div id="usa-mo-630-ps-2">
 							<img src="usa/mo/630/ps/19Dec19a.jpg" height="150" width="375">
 							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
+					</div>
+					<div id="usa-mo-652">
+						<h4>Mid-Missouri/Columbia (652)</h4>
+						<div id="usa-mo-652-jc-1">
+							<img src="usa/mo/652/jc/4May20a.jpg" height="150" width="375">
+							<caption>Jacquie Cummins, Columbia, MO 65201</caption>
 						</div>
 					</div>
 				</div>
