--- a/initials.html
+++ b/initials.html
@@ -36,6 +36,10 @@
 				<td>cf</td>
 			</tr>
 			<tr>
+				<td>Cummins, Jacquie</td>
+				<td>jc</td>
+			</tr>
+			<tr>
 				<td>Cummins, tom & Whitney</td>
 				<td>twc</td>
 			</tr>
