added sl to orlando, spain

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 					</ul>
 				</li>
 				<li>
+					<a href="#esp">Spain</a>
+					<ul>
+						<li>
+							<a href="#esp-laa">La Adrada</a>
+						</li>
+					</ul>
+				</li>
+				<li>
 					<a href="#irl">Ireland</a>
 					<ul>
 						<li>
@@ -361,6 +369,16 @@
 					</div>
 				</div>
 			</div>
+			<div id="esp">
+				<h2>Spain</h2>
+				<div id="esp-laa">
+					<h3>La Adrada</h3>
+					<div id="esp-laa-sl-1">
+						<img src="esp/laa/sl/21Nov14a.jpg" height="150" width="375">
+					</div>
+					<caption>Steve López, Los Gatos, CA 95032</caption>
+				</div>
+			</div>
 			<div id="irl">
 				<h2>Ireland</h2>
 				<div id="irl-unr">
@@ -547,6 +565,10 @@
 					</div>
 					<div id="usa-fl-328">
 						<h4>Orlando (328)</h4>
+						<div id="usa-fl-328-sl-1">
+							<img src="usa/fl/328/sl/15Dec95a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
 						<div id="usa-fl-328-bxc-1">
 							<img src="usa/fl/328/bxc/6Sep19a.png" height="150" width="375">
 							<caption>Beth and Xavier Christiansen, Melbourne, FL 32901</caption>
