--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 					</ul>
 				</li>
 				<li>
+					<a href="#fra">France</a>
+					<ul>
+						<li>
+							<a href="#fra-mulhouse">Mulhouse</a>
+						</li>
+					</ul>
+				</li>
+				<li>
 					<a href="#irl">Ireland</a>
 					<ul>
 						<li>
@@ -375,8 +383,18 @@
 					<h3>La Adrada</h3>
 					<div id="esp-laa-sl-1">
 						<img src="esp/laa/sl/21Nov14a.jpg" height="150" width="375">
+						<caption>Steve López, Los Gatos, CA 95032</caption>
 					</div>
-					<caption>Steve López, Los Gatos, CA 95032</caption>
+				</div>
+			</div>
+			<div id="fra">
+				<h2>France</h2>
+				<div id="fra-mulhouse">
+					<h3>Mulhouse</h3>
+					<div id="fra-mulhouse-sl-1">
+						<img src="fra/mulhouse/sl/9Sep95a.jpg" height="150" width="375">
+						<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+					</div>
 				</div>
 			</div>
 			<div id="irl">
