changed README and stylesheet name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Postmark collection</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<p>I've always liked coding, and I have started a postmark collection, so here's a combination of the two! Hope everyone is doing well.</p>
