--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<p>I've always liked coding, and I have started a postmark collection, so here's a combination of the two! Hope everyone is doing well.</p>
 		<p>I am not promising perfection. If you don't see your postmark, it may not be on here yet. Feel free to remind me that yours isn't on here yet!</p>
 		<div id="contactme">
-			<p>If you find something wrong, let me know by <a href="https://github.com/lopezeamonn/postmark/issues/new">creating an issue on GitHub</a> or <a href="mailto:eamonnspostmarks@gmail.com">emailing me.</a></p>
+			<p>If you find something wrong, let me know by <a href="/contact">contacting me</a>.</p>
 		</div>
 		<div id="toc_container">
 			<!-- unr stands for unreadable -->
