--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<p>I've always liked coding, and I have started a postmark collection, so here's a combination of the two! Hope everyone is doing well.</p>
-		<p>I am not promising perfection. If you don't see your postmark, it may not be on here yet. Feel free to remind me that yours isn't on here yet!</p>
-		<div id="contactme">
+		<div id="header">
+			<p>I've always liked coding, and I have started a postmark collection, so here's a combination of the two! Hope everyone is doing well.</p>
+			<p>I am not promising perfection. If you don't see your postmark, it may not be on here yet. Feel free to remind me that yours isn't on here yet!</p>
+			<p>Found this on the web and want to contribute? <a href="/contact">Contact me!</a></p>
 			<p>If you find something wrong, let me know by <a href="/contact">contacting me</a>.</p>
 		</div>
 		<div id="toc_container">
@@ -972,6 +973,9 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div id="footer">
+			<p id="footer.btt">Back to top</p>
 		</div>
 	</body>
 </html>
