--- a/initials.html
+++ b/initials.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Initials - Postmarks</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<h4>Initials page</h4>
