update on california

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 					<a href="#ner">Niger</a>
 					<ul>
 						<li>
-							<a href="ner-m">Maradi</a>
+							<a href="#ner-m">Maradi</a>
 						</li>
 						<li>
-							<a href="ner-n">Niamey</a>
+							<a href="#ner-n">Niamey</a>
 						</li>
 					</ul>
 				</li>
@@ -68,10 +68,10 @@
 					<a href="#rus">Russia</a>
 					<ul>
 						<li>
-							<a href="rus-stp">St. Petersburg 200960</a>
+							<a href="#rus-stp">St. Petersburg 200960</a>
 						</li>
 						<li>
-							<a href="rus-sev">Sevastopol</a>
+							<a href="#rus-sev">Sevastopol</a>
 						</li>
 					</ul>
 				</li>
@@ -79,7 +79,7 @@
 					<a href="#tza">Tanzania</a>
 					<ul>
 						<li>
-							<a href="tza-unr">Unreadable</a>
+							<a href="#tza-unr">Unreadable</a>
 						</li>
 					</ul>
 				</li>
@@ -87,7 +87,7 @@
 					<a href="#usa">United States</a>
 					<ul>
 						<li>
-							<a href="usa-al">Alabama</a>
+							<a href="#usa-al">Alabama</a>
 							<ul>
 								<li>
 									<a href="#usa-al-366">Mobile (366)</a>
@@ -122,10 +122,22 @@
 							<a href="#usa-ca">California</a>
 							<ul>
 								<li>
+									<a href="#usa-ca-94928">Rohnert Park (94928)</a>
+								</li>
+								<li>
+									<a href="#usa-ca-90631">La Habra (90631)</a>
+								</li>
+								<li>
+									<a href="#usa-ca-95030">Los Gatos (95030)</a>
+								</li>
+								<li>
 									<a href="#usa-ca-945">Oakland (945)</a>
 								</li>
 								<li>
 									<a href="#usa-ca-924">San Bernardino (924)</a>
+								</li>
+								<li>
+									<a href="#usa-ca-940">San Francisco (940)</a>
 								</li>
 								<li>
 									<a href="#usa-ca-950">San Jose (950)</a>
@@ -497,6 +509,27 @@
 				</div>
 				<div id="usa-ca">
 					<h3>California</h3>
+					<div id="usa-ca-94928">
+						<h4>Rohnert Park (94928)</h4>
+						<div id="usa-ca-94928-sl-1">
+							<img src="usa/ca/94928/sl/25Mar87a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+					</div>
+					<div id="usa-ca-90631">
+						<h4>La Habra (90631)</h4>
+						<div id="usa-ca-90631-sl-1">
+							<img src="usa/ca/90631/sl/17Dec86a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+					</div>
+					<div id="usa-ca-95030">
+						<h4>Los Gatos (95030)</h4>
+						<div id="usa-ca-95030-sl-1">
+							<img src="usa/ca/95030/sl/13Jul90a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+					</div>
 					<div id="usa-ca-945">
 						<h4>Oakland (945)</h4>
 						<div id="usa-ca-945-sl-1">
@@ -519,10 +552,33 @@
 							<caption>Skip Matthews, Palm Desert, CA 92211</caption>
 						</div>
 					</div>
+					<div id="usa-ca-940">
+						<h4>San Francisco (940)</h4>
+						<div id="usa-ca-940-sl-1">
+							<img src="usa/ca/940/sl/10Feb87a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+					</div>
 					<div id="usa-ca-950">
 						<h4>San Jose (950)</h4>
 						<div id="usa-ca-950-sl-1">
 							<img src="usa/ca/950/sl/10Apr20a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+						<div id="usa-ca-950-sl-2">
+							<img src="usa/ca/950/sl/4May20a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+						<div id="usa-ca-950-sl-3">
+							<img src="usa/ca/950/sl/14May20a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+						<div id="usa-ca-950-sl-4">
+							<img src="usa/ca/950/sl/11May20a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+						<div id="usa-ca-950-sl-5">
+							<img src="usa/ca/950/sl/29Jun90a.jpg" height="150" width="375">
 							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
 						</div>
 					</div>
