added connecticut section

--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
 							</ul>
 						</li>
 						<li>
+							<a href="#usa-ct">Connecticut</a>
+							<ul>
+								<li>
+									<a href="#usa-ct-060">Hartford (060)</a>
+								</li>
+						</li>
+						<li>
 							<a href="#usa-dc">District of Columbia</a>
 							<ul>
 								<li>
@@ -597,6 +604,20 @@
 						<div id="usa-co-800-jh-1">
 							<img src="usa/co/800/jh/5Dec19a.jpg" height="150" width="375">
 							<caption>Jason Hoffmann, Gaithersburg, MD 20882</caption>
+						</div>
+					</div>
+				</div>
+				<div id="usa-ct">
+					<h3>Connecticut</h3>
+					<div id="usa-ct-060">
+						<h4>Hartford (060)</h4>
+						<div id="usa-ct-060-sl-1">
+							<img src="usa/ct/060/sl/20Dec86a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+						<div id="usa-ct-060-sl-2">
+							<img src="usa/ct/060/sl/29Oct87a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
 						</div>
 					</div>
 				</div>
