added el to dc section

--- a/index.html
+++ b/index.html
@@ -649,6 +649,10 @@
 							<img src="usa/dc/200/jh/5Nov19a.jpg" height="150" width="375">
 							<caption>Jason Hoffmann, Gaithersburg, MD 20879</caption>
 						</div>
+						<div id="usa-dc-200-el-1">
+							<img src="usa/dc/200/el/20Apr20a.jpg" height="150" width="375">
+							<caption>Eamonn Lopez, Damascus, MD 20872/Boise Postmaster, Boise, ID 83708</caption>
+						</div>
 					</div>
 				</div>
 				<div id="usa-fl">
