added kansas section

--- a/index.html
+++ b/index.html
@@ -209,6 +209,14 @@
 							</ul>
 						</li>
 						<li>
+							<a href="#usa-ks">Kansas</a>
+							<ul>
+								<li>
+									<a href="#usa-ks-672">Wichita (672)</a>
+								</li>
+							</ul>
+						</li>
+						<li>
 							<a href="#usa-la">Louisiana</a>
 							<ul>
 								<li>
@@ -733,6 +741,16 @@
 						<div id="usa-in-462-ps-1">
 							<img src="usa/in/462/ps/17Dec03a.jpg" height="150" width="375">
 							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
+					</div>
+				</div>
+				<div id="usa-ks">
+					<h3>Kansas</h3>
+					<div id="usa-ks-672">
+						<h4>Wichita (672)</h4>
+						<div id="usa-ks-672-sl-1">
+							<img src="usa/ks/672/sl/11Jul90a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
 						</div>
 					</div>
 				</div>
