added kentucky section

--- a/index.html
+++ b/index.html
@@ -217,6 +217,14 @@
 							</ul>
 						</li>
 						<li>
+							<a href="#usa-ky">Kentucky</a>
+							<ul>
+								<li>
+									<a href="#usa-ky-41015">Latonia (41015)</a>
+								</li>
+							</ul>
+						</li>
+						<li>
 							<a href="#usa-la">Louisiana</a>
 							<ul>
 								<li>
@@ -750,6 +758,16 @@
 						<h4>Wichita (672)</h4>
 						<div id="usa-ks-672-sl-1">
 							<img src="usa/ks/672/sl/11Jul90a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+					</div>
+				</div>
+				<div id="usa-ky">
+					<h3>Kentucky</h3>
+					<div id="usa-ky-41015">
+						<h4>Latonia (41015)</h4>
+						<div id="usa-ky-41015-sl-1">
+							<img src="usa/ky/41015/sl/11Feb08a.jpg" height="150" width="375">
 							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
 						</div>
 					</div>
