added new jersey section

--- a/index.html
+++ b/index.html
@@ -307,6 +307,14 @@
 							</ul>
 						</li>
 						<li>
+							<a href="#usa-nj">New Jersey</a>
+							<ul>
+								<li>
+									<a href="#usa-nj-07606">South Hackensack (07606)</a>
+								</li>
+							</ul>
+						</li>
+						<li>
 							<a href="#usa-ny">New York</a>
 							<ul>
 								<li>
@@ -937,6 +945,16 @@
 						<div id="usa-nh-030-lf-1">
 							<img src="usa/nh/030/lf/13Dec19a.jpg" height="150" width="375">
 							<caption>Lewis Family, Bedford, NH 03110</caption>
+						</div>
+					</div>
+				</div>
+				<div id="usa-nj">
+					<h3>New Jersey</h3>
+					<div id="usa-nj-07606">
+						<h4>South Hackensack (07606)</h4>
+						<div id="usa-nj-07606-sl-1">
+							<img src="usa/nj/07606/sl/23Jul03a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
 						</div>
 					</div>
 				</div>
