added easton to pa section

--- a/index.html
+++ b/index.html
@@ -356,6 +356,9 @@
 							<a href="#usa-pa">Pennsylvania</a>
 							<ul>
 								<li>
+									<a href="#usa-pa-18042">Easton (18042)</a>
+								</li>
+								<li>
 									<a href="#usa-pa-171">Harrisburg (171)</a>
 								</li>
 								<li>
@@ -1022,6 +1025,13 @@
 				</div>
 				<div id="usa-pa">
 					<h3>Pennsylvania</h3>
+					<div id="usa-pa-18042">
+						<h4>Easton (18042)</h4>
+						<div id="usa-pa-18042-sl-1">
+							<img src="usa/pa/18042/sl/29Mar90a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+					</div>
 					<div id="usa-pa-171">
 						<h4>Harrisburg (171)</h4>
 						<div id="usa-pa-171-mah-1">
