added claysburg to pa section

--- a/index.html
+++ b/index.html
@@ -356,6 +356,9 @@
 							<a href="#usa-pa">Pennsylvania</a>
 							<ul>
 								<li>
+									<a href="#usa-pa-16625">Claysburg (16625)</a>
+								</li>
+								<li>
 									<a href="#usa-pa-18042">Easton (18042)</a>
 								</li>
 								<li>
@@ -1025,6 +1028,13 @@
 				</div>
 				<div id="usa-pa">
 					<h3>Pennsylvania</h3>
+					<div id="usa-pa-16625">
+						<h4>Claysburg (16625)</h4>
+						<div id="usa-pa-16625-sl-1">
+							<img src="usa/pa/16625/sl/13May05a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+					</div>
 					<div id="usa-pa-18042">
 						<h4>Easton (18042)</h4>
 						<div id="usa-pa-18042-sl-1">
