added wisconsin section

--- a/index.html
+++ b/index.html
@@ -420,10 +420,19 @@
 							<a href="#usa-wa">Washington</a>
 							<ul>
 								<li>
-									<a href="usa-wa-980">Seattle (980)</a>
+									<a href="#usa-wa-980">Seattle (980)</a>
 								</li>
 							</ul>
 						</li>
+						<li>
+							<a href="#usa-wi">Wisconsin</a>
+							<ul>
+								<li>
+									<a href="#usa-wi-530">Milwaukee (530)</a>
+								</li>
+							</ul>
+						</li>
+
 					</ul>
 				</li>
 			</ul>
@@ -1166,6 +1175,16 @@
 						<div id="usa-wa-990-mgd-2">
 							<img src="usa/wa/990/mgd/22Apr20a2.jpg" height="150" width="375">
 							<caption>Mary & Glen Day, Fruitland, WA 99129</caption>
+						</div>
+					</div>
+				</div>
+				<div id="usa-wi">
+					<h3>Wisconsin</h3>
+					<div id="usa-wi-530">
+						<h4>Milwaukee (530)</h4>
+						<div id="usa-wi-530-sl-1">
+							<img src="usa/wi/530/sl/19Jul98a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
 						</div>
 					</div>
 				</div>
