added romania section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
 					</ul>
 				</li>
 				<li>
+					<a href="#rou">Romania</a>
+					<ul>
+						<li>
+							<a href="#rou-bucharest">Bucharest</a>
+						</li>
+					</ul>
+				</li>
+				<li>
 					<a href="#rus">Russia</a>
 					<ul>
 						<li>
@@ -495,6 +503,16 @@
 					<div id="ner-n-ps-1">
 						<img src="ner/n/ps/7Feb20a.jpg" height="150" width="375">
 						<caption>Patti Southerland, Payson, UT 84651</caption>
+					</div>
+				</div>
+			</div>
+			<div id="rou">
+				<h2>Romania</h2>
+				<div id="rou-bucharest">
+					<h3>Bucharest</h3>
+					<div id="rou-bucharest-ggl-1">
+						<img src="rou/bucharest/ggl/4Jan94a.jpg" height="150" width="375">
+						<caption>Ed Lopez, Bartow, FL 33830</caption>
 					</div>
 				</div>
 			</div>
