added sweden section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
 					</ul>
 				</li>
 				<li>
+					<a href="#swe">Sweden</a>
+					<ul>
+						<li>
+							<a href="#swe-stockholm">Stockholm</a>
+						</li>
+					</ul>
+				</li>
+				<li>
 					<a href="#tza">Tanzania</a>
 					<ul>
 						<li>
@@ -530,6 +538,16 @@
 					<div id="rus-sev-it-1">
 						<img src="rus/sev/it/11Nov19a.jpg" height="150" width="375">
 						<caption>Officer T, Boyds, MD 20841</caption>
+					</div>
+				</div>
+			</div>
+			<div id="swe">
+				<h2>Sweden</h2>
+				<div id="swe-stockholm">
+					<h3>Stockholm</h3>
+					<div id="swe-stockholm-ggl-1">
+						<img src="swe/stockholm/ggl/11Jul89a.jpg" height="150" width="375">
+						<caption>Ed Lopez, Bartow, FL 33830</caption>
 					</div>
 				</div>
 			</div>
