added japan section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
 					</ul>
 				</li>
 				<li>
+					<a href="#jpn">Japan</a>
+					<ul>
+						<li>
+							<a href="#jpn-tokyo">Tokyo</a>
+						</li>
+					</ul>
+				</li>
+				<li>
 					<a href="#ner">Niger</a>
 					<ul>
 						<li>
@@ -494,6 +502,16 @@
 					<div id="irl-unr-kf-1">
 						<img src="irl/unr/kf/Unreadable1a.jpg" height="150" width="375">
 						<caption>The Kennedy Family, Sparkill, NY 10976</caption>
+					</div>
+				</div>
+			</div>
+			<div id="jpn">
+				<h2>Japan</h2>
+				<div id="jpn-tokyo">
+					<h3>Tokyo</h3>
+					<div id="jpn-tokyo-ggl-1">
+						<img src="jpn/tokyo/ggl/Unreadable1a.jpg" height="150" width="375">
+						<caption>Ed Lopez, Bartow, FL 33830</caption>
 					</div>
 				</div>
 			</div>
