added uk section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
 					</ul>
 				</li>
 				<li>
+					<a href="#gbr">United Kingdom</a>
+					<ul>
+						<li>
+							<a href="#gbr-im">Isle of Man</a>
+						</li>
+					</ul>
+				</li>
+				<li>
 					<a href="#usa">United States</a>
 					<ul>
 						<li>
@@ -576,6 +584,16 @@
 					<div id="tza-unr-ps-1">
 						<img src="tza/unr/ps/2May12a.jpg" height="150" width="375">
 						<caption>Patti Southerland, Payson, UT 84651</caption>
+					</div>
+				</div>
+			</div>
+			<div id="gbr">
+				<h2>United Kingdom</h2>
+				<div id="gbr-im">
+					<h3>Isle of Man</h3>
+					<div id="gbr-im-ggl-1">
+						<img src="gbr/im/Unreadable1a.jpg" height="150" width="375">
+						<caption>Ed Lopez, Bartow, FL 33830</caption>
 					</div>
 				</div>
 			</div>
