--- a/index.html
+++ b/index.html
@@ -596,6 +596,13 @@
 						<caption>Ed Lopez, Bartow, FL 33830</caption>
 					</div>
 				</div>
+				<div id="gbr-nottingham">
+					<h3>Nottingham</h3>
+					<div id="gbr-nottingham-ggl-1">
+						<img src="gbr/nottingham/ggl/11Aug98a.jpg" height="150" width="375">
+						<caption>Ed Lopez, Bartow, FL 33830</caption>
+					</div>
+				</div>
 			</div>
 			<div id="usa">
 				<h2>United States</h2>
