added isle of man to uk section

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
 				<div id="gbr-im">
 					<h3>Isle of Man</h3>
 					<div id="gbr-im-ggl-1">
-						<img src="gbr/im/Unreadable1a.jpg" height="150" width="375">
+						<img src="gbr/im/ggl/Unreadable1a.jpg" height="150" width="375">
 						<caption>Ed Lopez, Bartow, FL 33830</caption>
 					</div>
 				</div>
@@ -951,7 +951,7 @@
 					<div id="usa-md-20872">
 						<h4>Damascus (20872)</h4>
 						<div id="usa-md-20872-el-1">
-							<img src="usa/md/20872/el/27Dec19a.jpg" height="150" width="375">
+							<img src="usa/md/20872/el/27Dec19a.jpg" height="150" width="150">
 							<caption>Eamonn Lopez, Damascus, MD 20872</caption>
 						</div>
 					</div>
@@ -1028,7 +1028,7 @@
 						<h4>Las Vegas (890)</h4>
 						<div id="usa-nv-890-sl-1">
 							<img src="usa/nv/890/sl/14Jan93a.jpg" height="150" width="375">
-							<caption>Steve Lopez, Los Gatos, CA 95032stev</caption>
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
 						</div>
 					</div>
 				</div>
@@ -1157,7 +1157,7 @@
 					<div id="usa-sc-29292">
 						<h4>Columbia (29292)</h4>
 						<div id="usa-sc-29292-sf-1">
-							<img src="usa/sc/29292/sf/18Oct19a.jpg" height="150" width="375">
+							<img src="usa/sc/29292/sf/18Oct19a.jpg" height="150" width="150">
 							<caption>Shelley Foels, Murrells Inlet, SC 29576</caption>
 						</div>
 					</div>
@@ -1270,7 +1270,7 @@
 			</div>
 		</div>
 		<div id="footer">
-			<p id="footer.btt">Back to top</p>
+			<p id="footer.btt"><a href="#header">Back to top</a></p>
 		</div>
 	</body>
 </html>
