added cancon to france section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 						<li>
 							<a href="#fra-mulhouse">Mulhouse</a>
 						</li>
+						<li>
+							<a href="#fra-cancon">Cancon</a>
+						</li>
 					</ul>
 				</li>
 				<li>
@@ -500,6 +503,13 @@
 					<div id="fra-mulhouse-sl-1">
 						<img src="fra/mulhouse/sl/9Sep95a.jpg" height="150" width="375">
 						<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+					</div>
+				</div>
+				<div id="fra-cancon">
+					<h3>Cancon</h3>
+					<div id="fra-cancon-ggl-1">
+						<img src="fra/cancon/ggl/Unreadable1a.jpg" height="150" width="375">
+						<caption>Ed Lopez, Bartow, FL 33830</caption>
 					</div>
 				</div>
 			</div>
