added to nottingham section

--- a/index.html
+++ b/index.html
@@ -612,6 +612,10 @@
 						<img src="gbr/nottingham/ggl/11Aug98a.jpg" height="150" width="375">
 						<caption>Ed Lopez, Bartow, FL 33830</caption>
 					</div>
+					<div id="gbr-nottingham-ggl-2">
+						<img src="gbr/nottingham/ggl/9Jul93a.jpg" height="150" width="375">
+						<caption>Ed Lopez, Bartow, FL 33830</caption>
+					</div>
 				</div>
 			</div>
 			<div id="usa">
