--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
 					</ul>
 				</li>
 				<li>
+					<a href="#uga">Uganda</a>
+					<ul>
+						<li>
+							<a href="#uga-kampala">Kampala</a>
+						</li>
+					</ul>
+				</li>
+				<li>
 					<a href="#gbr">United Kingdom</a>
 					<ul>
 						<li>
@@ -594,6 +602,16 @@
 					<div id="tza-unr-ps-1">
 						<img src="tza/unr/ps/2May12a.jpg" height="150" width="375">
 						<caption>Patti Southerland, Payson, UT 84651</caption>
+					</div>
+				</div>
+			</div>
+			<div id="uga">
+				<h2>Uganda</h2>
+				<div id="uga-kampala">
+					<h3>Kamapla</h3>
+					<div id="uga-kampala-ggl-1">
+						<img src="uga/kampala/ggl/Unreadable1a.jpg" height="150" width="375">
+						<caption>Ed Lopez, Bartow, FL 33830</caption>
 					</div>
 				</div>
 			</div>
