added germany section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 					</ul>
 				</li>
 				<li>
+					<a href="#deu">Germany</a>
+					<ul>
+						<li>
+							<a href="#deu-wittichen">Wittichen</a>
+						</li>
+					</ul>
+				</li>
+				<li>
 					<a href="#irl">Ireland</a>
 					<ul>
 						<li>
@@ -517,6 +525,16 @@
 					<h3>Cancon</h3>
 					<div id="fra-cancon-ggl-1">
 						<img src="fra/cancon/ggl/Unreadable1a.jpg" height="150" width="375">
+						<caption>Ed Lopez, Bartow, FL 33830</caption>
+					</div>
+				</div>
+			</div>
+			<div id="deu">
+				<h2>Germany</h2>
+				<div id="deu-wittichen">
+					<h3>Wittichen</h3>
+					<div id="deu-wittichen-ggl-1">
+						<img src="deu/wittichen/ggl/8Dec89a.jpg" height="150" width="375">
 						<caption>Ed Lopez, Bartow, FL 33830</caption>
 					</div>
 				</div>
