--- a/initials.html
+++ b/initials.html
@@ -103,7 +103,7 @@
 			</tr>
 			<tr>
 				<td>Lopez, Ed & Cathy</td>
-				<td>e_cl</td>
+				<td>ggl</td>
 			</tr>
 			<tr>
 				<td>Lopez, Michael & Mary Beth</td>
