--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
 					<div id="usa-ak-995">
 						<h4>Anchorage (995)</h4>
 						<div id="usa-ak-995-e_cl-1">
-							<img src="usa/ak/995/e_cl/24Aug17a.jpg" height="150" width="375">
+							<img src="usa/ak/995/ggl/24Aug17a.jpg" height="150" width="375">
 							<caption>Ed & Cathy Lopez, Bartow, FL 33830</caption>
 						</div>
 					</div>
